bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:4: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (negative){
         ^